--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@types/meow": "^5.0.0",
+    "@types/node": "^16.11.12",
     "ava": "^3.15.0",
     "fixturez": "^1.0.1",
     "prettier": "1.19.1",
