--- a/package.json
+++ b/package.json
@@ -23,15 +23,9 @@
   "engines": {
     "node": ">=8.5.0"
   },
-  "ava": {
-    "files": [
-      "!__fixtures__/**/*"
-    ],
-    "extensions": [
-      "ts"
-    ],
-    "require": [
-      "ts-node/register"
+  "jest": {
+    "testPathIgnorePatterns": [
+      "__fixtures__"
     ]
   },
   "scripts": {
@@ -61,18 +55,13 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
-    "@types/chai": "^4.3.0",
-    "@types/jest": "^27.0.3",
     "@types/meow": "^5.0.0",
     "@types/node": "^16.11.12",
-    "@types/sinon": "^10.0.6",
-    "ava": "^3.15.0",
     "babel-jest": "^27.4.4",
     "chai": "^4.3.4",
     "fixturez": "^1.0.1",
     "jest": "^27.4.4",
     "prettier": "2.5.1",
-    "sinon": "^12.0.1",
     "ts-node": "^8.6.2",
     "typescript": "3.9.10"
   }
