--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "chalk": "^3.0.0",
+    "@types/jest": "^27.0.3",
+    "chalk": "^4.1.2",
     "cli-table": "^0.3.1",
     "date-fns": "^1.29.0",
     "default-pager": "^1.1.0",
@@ -44,9 +45,9 @@
     "left-pad": "^1.2.0",
     "lodash.groupby": "^4.6.0",
     "lodash.pick": "^4.4.0",
-    "meow": "^6.0.0",
+    "meow": "^v9.0.0",
     "mkdirp": "^0.5.1",
-    "ora": "^1.4.0",
+    "ora": "^5.4.1",
     "p-limit": "^2.0.0",
     "rimraf-promise": "^2.0.0",
     "string-to-stream": "^1.1.0"
