--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "dev": "ts-node ./cli.ts",
     "format": "prettier --write \"{lib/**/*.{js, ts}, *.{js, ts}}\"",
     "prepublishOnly": "yarn build",
-    "test": "jest"
+    "test": "jest",
+    "typecheck": "tsc-files --noEmit"
   },
   "dependencies": {
     "@types/jest": "^27.0.3",
@@ -64,6 +65,7 @@
     "jest": "^27.4.4",
     "prettier": "2.5.1",
     "ts-node": "^8.6.2",
+    "tsc-files": "^1.1.3",
     "typescript": "3.9.10"
   }
 }
