--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "date-fns": "^1.29.0",
     "default-pager": "^1.1.0",
     "got": "^8.0.1",
+    "inquirer": "^8.2.0",
     "left-pad": "^1.2.0",
     "lodash.groupby": "^4.6.0",
     "lodash.pick": "^4.4.0",
@@ -57,6 +58,8 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/inquirer": "^8.2.0",
+    "@types/lodash.pick": "^4.4.6",
     "@types/meow": "^5.0.0",
     "@types/node": "^16.11.12",
     "babel-jest": "^27.4.4",
