--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test
 on:
   push:
     branches:
-      - "master"
+      - 'master'
   pull_request: {}
 jobs:
   build:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ["12", "14", "16"]
+        node: ['12', '14', '16']
 
     steps:
       - name: Checkout repo
