--- a/package.json
+++ b/package.json
@@ -23,11 +23,6 @@
   "engines": {
     "node": ">=8.5.0"
   },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "__fixtures__"
-    ]
-  },
   "scripts": {
     "build": "rm -rf dist && tsc && chmod +x dist/cli.js",
     "dev": "ts-node ./cli.ts",
@@ -55,10 +50,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@types/jest": "^27.0.3",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
     "@types/inquirer": "^8.2.0",
+    "@types/jest": "^27.0.3",
     "@types/lodash.pick": "^4.4.6",
     "@types/meow": "^5.0.0",
     "@types/node": "^16.11.12",
@@ -67,6 +62,7 @@
     "fixturez": "^1.0.1",
     "jest": "^27.4.4",
     "prettier": "2.5.1",
+    "ts-jest": "^27.1.4",
     "ts-node": "^8.6.2",
     "tsc-files": "^1.1.3",
     "typescript": "3.9.10"
