Added inquirer and tests for built util

--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "got": "^8.0.1",
     "inquirer": "^8.2.0",
     "left-pad": "^1.2.0",
+    "lodash.flatten": "^4.4.0",
     "lodash.groupby": "^4.6.0",
     "lodash.pick": "^4.4.0",
+    "lodash.without": "^4.4.0",
     "meow": "^v9.0.0",
     "mkdirp": "^0.5.1",
     "ora": "^5.4.1",
